--- a/R02_Sakuhin3/R02_Sakuhin3.vcxproj.filters
+++ b/R02_Sakuhin3/R02_Sakuhin3.vcxproj.filters
@@ -28,5 +28,8 @@
     <ClCompile Include="main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="mainNoDx.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
