DXライブラリ不使用プログラムに追加が必要な関数等の割り出し

--- a/R02_Sakuhin3/R02_Sakuhin3.vcxproj.filters
+++ b/R02_Sakuhin3/R02_Sakuhin3.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="resource.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="NoDxLib.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc">
@@ -28,7 +31,7 @@
     <ClCompile Include="main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="mainNoDx.cpp">
+    <ClCompile Include="mainNoDxLib.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
