--- a/R02_Sakuhin3/R02_Sakuhin3.vcxproj
+++ b/R02_Sakuhin3/R02_Sakuhin3.vcxproj
@@ -155,12 +155,13 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="mainNoDx.cpp">
+    <ClCompile Include="mainNoDxLib.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="NoDxLib.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
